# GPUKalman

./: .gitignore  CMakeLists.txt  README.md
Batched/include/: helper_cusolver.h  pipe.h
Batched/src/: main.cu  pipe.cu
BatchedWithStreams/: CMakeLists.txt
BatchedWithStreams/include/: filter_params.h  pipe.h
BatchedWithStreams/src/: main.cu  pipe.cu
examples/: CMakeLists.txt  basic_2D_path.cpp  basic_3D_path.cpp  batch_3D_path.cpp
examples/data/: basic_2D_path_sensor1.csv  basic_2D_path_truth.csv  basic_3D_path_sensor1.csv  basic_3D_path_truth.csv  multi_3D_sensor1.csv  multi_3D_truth.csv
examples/output/: basic_2D_path_sensor1_cuda.csv  basic_2D_path_sensor1_python.csv  basic_3D_path_sensor1_cuda.csv  basic_3D_path_sensor1_python.csv  multi_3D_sensor1_cuda.csv  multi_3D_sensor1_python.csv
examples/scripts/: basic_2D_path.py  full_model_3D.py  generate3D
include/: DeviceTimer.h  KalmanFilter.h  Matrix.h
include/helpers/: helper_cuda.h
input/: 16.csv
scripts/: asax_build.sh  basic_noisy_measurement  generate2D  glob_results.sh  plot  runBatched.pbs  runBatchedWithStreams.pbs  runExample.sh  submitall.sh
src/: CMakeLists.txt  DeviceTimer.cpp  LibraryBasedMatrixOperationsImpl.cu
stream_test/: pipeline.cu
tests/: CMakeLists.txt  test_KalmanFilter.cpp  test_Matrix.cpp  test_MatrixOperations.cpp
